tests/baselines/reference/invalid-duplicate-groupspecifier.errors.txt
invalid-duplicate-groupspecifier.ts(18,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-duplicate-groupspecifier.ts(18,11): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-duplicate-groupspecifier.ts(18,12): error TS1513: Named capturing groups with the same name must be mutually exclusive to each other.


==== invalid-duplicate-groupspecifier.ts (3 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifiers within one alternative must be unique.
    info: |
      It is a Syntax Error if |Pattern| contains two distinct |GroupSpecifier|s
      _x_ and _y_ for which CapturingGroupName(_x_) is the same as
      CapturingGroupName(_y_) and such that CanBothParticipate(_x_, _y_) is *true*.
    esid: sec-patterns-static-semantics-early-errors
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>a)(?<a>a)/;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
              ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
               ~
!!! error TS1513: Named capturing groups with the same name must be mutually exclusive to each other.
    